--- a/credentials.css
+++ b/credentials.css
@@ -1,3 +1,14 @@
+
+@media (max-width: 600px) {
+    body {
+        flex-direction: column;
+        font-family: Arial, sans-serif;
+        margin: 1rem;
+        padding: 2;
+        box-sizing: border-box;
+        background-color: aqua
+    }
+}
 body {
     font-family: Arial, sans-serif;
     margin: 1rem;
@@ -34,12 +45,6 @@ nav ul li a:hover {
     border-radius: 5px;
 }
 
-@media (max-width: 600px) {
-    main {
-        flex-direction: column;
-    }
-}
-
 main h2 {
     padding: 0;
     color: purple;
@@ -52,21 +57,6 @@ main h3 {
 
 section {
     margin-bottom: 2em;
-}
-
-#home img {
-    border-radius: 20%;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    display: block;
-    margin: 0;
-    width: 200px;
-}
-
-#home h1 {
-    text-align: left;
-    font-size: 1.2em;
-    color: purple;
-    margin-top: 0;
 }
 
 footer {
